Fixed sticky logo on mobile menu

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -106,7 +106,7 @@ header a{
 }
 /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
-  padding-top: 102px;
+  padding-top: 142px;
 }
 .sticky .logo {
     width: 103px;
